# libbmsdi

./: .drone.yml  CMakeLists.txt  LICENSE  README.md  fips.yml  package.xml  wercker.yml
include/libbm_sdi_camera_control/: bmsdi.h  helpers.h  protocol.h
include/libbmsdi/: bmsdi.h  bmsdi_message.h  helpers.h  protocol.h  values.h
lib/: CMakeLists.txt  bmsdi_buffer.c  bmsdi_message.c  datatypes.c  modes.c  modes.cpp  packet.c
test/unit/: CMakeLists.txt  test_decode_mode.cpp  test_new_cmd_packet.cpp  test_new_config_helpers.cpp  test_new_config_message.cpp  test_new_config_packet.cpp  test_new_packet.cpp  test_protocol.cpp
